--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <div class="page">
 <body class="wrapper"> 
-  <img src="assets/images/avatar-jessica.jpeg" alt="profile picture">
+  <img src="./avatar-jessica.jpeg" alt="profile picture">
   <h1 class="name">Jessica Randall</h1>
   <h6 class="location">London, United Kingdom</h6>
   <p class="p1">"Front-end developer and avid reader."</p>
